--- a/mySecondProgram.html
+++ b/mySecondProgram.html
@@ -4,7 +4,7 @@
     <title> GITHUB</title>
   </HEAD>
   <BODY>
-    <h1>Open Source Technologies</h1>
+    <h1>Open Source Technologies</h1><br>
     <p>Practical no-4</p>
     </Body>
 </HTML>
